--- a/Source Code/Appointment App/app/src/main/res/layout/activity_doctor_panel.xml
+++ b/Source Code/Appointment App/app/src/main/res/layout/activity_doctor_panel.xml
@@ -11,15 +11,12 @@
         android:layout_height="wrap_content"
         android:theme="@style/Theme.AppointmentApplication.AppBarOverlay">
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:minHeight="?actionBarSize"
-            android:padding="@dimen/appbar_padding"
-            android:text="@string/app_name"
-            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:popupTheme="@style/Theme.AppointmentApplication.PopupOverlay"
+            app:titleTextAppearance="?android:textAppearanceMedium"/>
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
