--- a/Source Code/Appointment App/app/src/main/res/layout/activity_patient_panel.xml
+++ b/Source Code/Appointment App/app/src/main/res/layout/activity_patient_panel.xml
@@ -23,7 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:popupTheme="@style/Theme.AppointmentApplication.PopupOverlay"
-                app:titleTextAppearance="?android:textAppearanceMedium"/>
+                app:titleTextAppearance="?android:textAppearanceSmall"/>
 
         </com.google.android.material.appbar.AppBarLayout>
 
