--- a/Source Code/Appointment App/app/src/main/res/layout/list_appointment_item.xml
+++ b/Source Code/Appointment App/app/src/main/res/layout/list_appointment_item.xml
@@ -117,7 +117,7 @@
                 android:gravity="center"
                 android:clickable="true"
                 android:focusable="true"
-                android:text="@string/fa_edit"
+                android:text="@string/fa_pencil_alt_solid"
                 android:textAppearance="?android:textAppearanceMedium"
                 android:textColor="@color/white"
                 android:background="@color/infoColor"
