Fixed reason input dialog in AppointmentListHolder

--- a/Source Code/Appointment App/app/src/main/res/values/themes.xml
+++ b/Source Code/Appointment App/app/src/main/res/values/themes.xml
@@ -21,6 +21,10 @@
 
     <style name="Theme.AppointmentApplication.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="TintTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorAccent">#11A31F</item>
+    </style>
+
     <style name="dialog_blue_button" parent="android:Widget.Button">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
