--- a/Source Code/Appointment App/app/src/main/res/layout/dialog_create_appointment.xml
+++ b/Source Code/Appointment App/app/src/main/res/layout/dialog_create_appointment.xml
@@ -408,7 +408,7 @@
                             android:layout_height="wrap_content"
                             android:textAppearance="?android:textAppearanceSmall"
                             android:fontFamily="@font/poppins_light"
-                            android:text="@string/text_hint_date"/>
+                            android:text="@string/text_hint_time"/>
 
                         <LinearLayout
                             android:layout_width="match_parent"
