--- a/Source Code/Appointment App/app/src/main/res/layout/activity_patient_panel.xml
+++ b/Source Code/Appointment App/app/src/main/res/layout/activity_patient_panel.xml
@@ -30,47 +30,58 @@
         <jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout
             android:id="@+id/refresh_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true">
 
-            <LinearLayout
+            <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <include layout="@layout/content_scrolling" />
+                android:fillViewport="true"
+                android:fitsSystemWindows="true">
 
                 <LinearLayout
-                    android:id="@+id/parent_no_schedule"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:gravity="center"
-                    android:visibility="visible">
+                    android:fitsSystemWindows="true">
 
-                    <ImageView
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:layout_margin="5dp"
-                        android:alpha="0.4"
-                        android:scaleType="centerInside"
-                        android:src="@drawable/no_schedule"
-                        android:contentDescription="@string/app_name"
-                        app:tint="#11A31F"/>
+                    <include layout="@layout/content_scrolling" />
 
-                    <TextView
+                    <LinearLayout
+                        android:id="@+id/parent_no_schedule"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
                         android:gravity="center"
-                        android:alpha="0.4"
-                        android:text="@string/cdata_patient_no_schedule"
-                        android:textColor="#11A31F"
-                        android:textAppearance="?android:textAppearanceSmall"
-                        android:fontFamily="@font/poppins_light"/>
+                        android:visibility="visible"
+                        android:fitsSystemWindows="true">
+
+                        <ImageView
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            android:layout_margin="5dp"
+                            android:alpha="0.4"
+                            android:scaleType="centerInside"
+                            android:src="@drawable/no_schedule"
+                            android:contentDescription="@string/app_name"
+                            app:tint="#11A31F"/>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
+                            android:gravity="center"
+                            android:alpha="0.4"
+                            android:text="@string/cdata_patient_no_schedule"
+                            android:textColor="#11A31F"
+                            android:textAppearance="?android:textAppearanceSmall"
+                            android:fontFamily="@font/poppins_light"/>
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
-            </LinearLayout>
+            </androidx.core.widget.NestedScrollView>
 
         </jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout>
 
