--- a/Source Code/Appointment App/app/src/main/res/layout/content_scrolling.xml
+++ b/Source Code/Appointment App/app/src/main/res/layout/content_scrolling.xml
@@ -7,7 +7,10 @@
     android:layout_height="match_parent"
     tools:context=".PatientPanelActivity"
     app:layout_anchor="@id/app_bar"
-    app:layout_anchorGravity="bottom">
+    app:layout_anchorGravity="bottom"
+    android:fillViewport="true"
+    android:fitsSystemWindows="true"
+    tools:showIn="@layout/activity_patient_panel">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/patient_appointmentList"
