--- a/Source Code/Appointment App/app/src/main/res/layout/activity_splash.xml
+++ b/Source Code/Appointment App/app/src/main/res/layout/activity_splash.xml
@@ -7,9 +7,10 @@
     tools:context=".SplashActivity">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:src="@mipmap/ic_launcher_round"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:src="@drawable/ic_logo"
+        android:scaleType="centerInside"
         android:layout_gravity="center" />
 
     <LinearLayout
