--- a/Source Code/Appointment App/app/src/main/res/layout/activity_splash.xml
+++ b/Source Code/Appointment App/app/src/main/res/layout/activity_splash.xml
@@ -16,7 +16,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:gravity="center">
+        android:gravity="center"
+        android:visibility="gone">
 
         <info.androidhive.fontawesome.FontTextView
             android:layout_width="wrap_content"
